# thota-dq

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  action.yml  glama.json  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  eval.yml  release.yml
aegis_benchmark/: __init__.py  __main__.py  harness.py  metrics.py  report.py  tasks.py
demo/: README.md  demo.tape  realworld_demo.py  rules.yaml  run_demo.sh  seed_demo.py
demo/fraud/: pipeline.yaml  policy.md  report.json  rules.yaml  rules_accounts.yaml  rules_compliance_flags.yaml  rules_counterparties.yaml  rules_customers.yaml  rules_sanctions_list.yaml  rules_transactions.yaml  schema.md  seed.sql
docs/: CNAME  architecture.md  audit-trail.md  cli-reference.md  contributing.md  getting-started.md  index.md  rule-schema-reference.md  vs-competitors.md
docs/integrations/: airflow.md  dbt.md  github-actions.md  hermes.md  mcp-clients.md  mcp.md
docs/javascripts/: extra.js
docs/overrides/: 404.html  home.html
docs/stylesheets/: extra.css
examples/retail_basic/: demo.py  rules.yaml  rules_full.yaml  seed_data.py
marketing/: reddit_dataengineering.md  show_hn.md
notebooks/: quickstart.ipynb
tests/: __init__.py  test_airflow_operator.py  test_anomaly_detection.py  test_athena_adapter.py  test_audit_logger.py  test_audit_wal.py  test_bigquery_adapter.py  test_builtin_rules.py  test_classify_node.py  test_databricks_adapter.py  test_dbt_parser.py  test_duckdb_adapter.py  test_eval_suite.py  test_fts_search.py  test_github_action.py  test_mcp_server.py  test_ollama_adapter.py  test_openai_adapter.py  test_parallel_node.py  test_postgres_adapter.py  test_pricing.py  test_project_config.py  test_rca.py  test_reconciliation.py  test_remediate_node.py  test_rest_api.py  test_retail_pack.py  test_retry_adapter.py  test_rule_generation.py  test_rules.py  test_sharegpt_export.py  test_slack_output.py  test_sql_injection.py  test_sql_verify.py  test_validate.py  test_vscode_extension.py  test_warehouse_factory.py
tests/fixtures/: rules_sample.yaml
thota_dq/: __init__.py
thota_dq/adapters/: __init__.py
thota_dq/audit/: __init__.py  logger.py  search.py  trajectory.py
thota_dq/cli/: __init__.py  main.py  mcp_runner.py
thota_dq/config/: __init__.py  project.py
thota_dq/core/: __init__.py  agent.py  state.py
thota_dq/memory/: __init__.py  column_stats.py  rule_versions.py  (+1 more)
vscode-extension/: .vscodeignore  language-configuration.json  package.json  tsconfig.json
(+57 files in other folders)
